@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '4.0.0'
+	id 'org.springframework.boot' version '3.5.8'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -25,7 +25,7 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2025.1.0")
+	set('springCloudVersion', "2025.0.0")
 }
 
 dependencyManagement {
@@ -42,30 +42,58 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	runtimeOnly 'org.postgresql:postgresql'
 
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.apache.commons:commons-pool2'
+	implementation 'org.springframework.boot:spring-boot-starter-logging'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+
+
+	testImplementation "org.testcontainers:testcontainers-bom:1.19.7"
+	testImplementation "org.testcontainers:junit-jupiter"
+	testImplementation "org.testcontainers:postgresql"
+	testImplementation 'org.testcontainers:testcontainers'
+
+	testImplementation 'org.mockito:mockito-core'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+	testImplementation 'com.h2database:h2'
+	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
+
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs = [
+			"-XX:+EnableDynamicAgentLoading",
+			"-Djdk.instrument.traceUsage=false"
+	]
 }
 
 tasks.withType(JavaCompile).configureEach {
 	options.compilerArgs = [
 			'-Amapstruct.suppressGeneratorTimestamp=true',
 			'-Amapstruct.defaultComponentModel=spring',
-			'-Amapstruct.verbose=true'
+			'-Amapstruct.verbose=false',
+			'-Amapstruct.suppressGeneratorVersionInfoComment=true'
 	]
 }
